[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = "1.12.0"
ferris-says = "0.3.1"
futures = "0.3.29"
once_cell = "1.18.0"
serde = "1.0.190"
serde_json = "1.0.108"
tiberius = "0.12.2"
